Fixed an error in pagination count, added some scale to the animstion, workied on small device responsive (Samsung Flip phones are super narrow)

--- a/src/index.css
+++ b/src/index.css
@@ -478,7 +478,6 @@ button {
 @media (min-width: 1024px) {
   .categoryListingImg {
     width: auto;
-    height: 217px;
     aspect-ratio:4/3;
     object-fit:cover;
   }
@@ -502,10 +501,7 @@ button {
   opacity: 0.8;
   margin-top:0;
   margin-bottom: 0;
-  width:70%;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow-x:hidden;
+
 }
 
 .categoryListingName {
@@ -513,10 +509,7 @@ button {
   font-size: 1rem;
   margin: 0;
   line-height: 1.5;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow-x:hidden;
-  width:85%;
+
 }
 
 .categoryListingPrice {
@@ -542,24 +535,31 @@ button {
 .categoryListing{
   opacity:0;
   transform:translate(-700px, 0);
-  animation:card 0.5s linear  ;
+  animation:card 4s linear forwards;
+  height:auto;
 }
+
+
 @keyframes card {
   0% {
     display:inline-block;
-    transform:translate(-700px, 0);
+    transform:translate(-700px, 0) scaleY(0.3);
     opacity:0;
-  
+    scaleX:0.05;
   }
-  20% {opacity:0;}
+  20% {
+    opacity:0;
+  }
   70% {
     display:inline-block;
-    transform:translate(0px, 0);
+    transform:translate(0px, 0) scaleY(1);
   }
   100% {
     display:inline-block;
     opacity:1;
     transform:translate(0, 0);
+    background:rgb(0 0 0 /0%);
+    height:auto;
   }
 }
 .pagination {
@@ -607,7 +607,11 @@ button {
   margin-top: 2rem;
   line-height:1.5rem;
 }
-
+.loadMore:disabled{
+  opacity: 0.05;
+  cursor:default;
+  transition:opacity 1s linear;
+}
 .listingDetails {
   margin-bottom: 10rem;
 }
@@ -699,6 +703,7 @@ button {
     
   }
 }
+
 .listingDetailsList li {
   margin: 0.3rem 0;
   font-weight: 500;
@@ -990,5 +995,107 @@ input:focus-visible,
 .formButtonActive:focus-visible,
 button[type="submit"]:focus-visible{
   box-shadow:inset 0 0 2px 2px  rgb(255 255 255 / 70%);
+ 
+}
+@media (max-width:450px) {
+  .categoryListingLocation{
+      width:70%;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow-x:hidden;
+  }
+  .categoryListingName{
+    white-space:wrap;
+    line-height:normal;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow-x:hidden;
+    width:85%;
+  }
+  .categoryListingInfoDiv{
+    max-width:unset;
+    width:100%;
+    display:grid;
+    white-space:nowrap;
+    grid-template-columns: 1fr;
+    margin-top:0.2rem;
+    gap:0;
+    column-gap:0rem;
+  }
+  .categoryListingInfoDiv div {
+    display:flex;
+    align-items: center;
+    column-gap:1rem;
+  }
+  .categoryListingInfoDiv img{
+    width:1.25rem;
+  }
+  .categoryListingInfoText{
+    white-space:nowrap;
+    line-height:1;
+    padding:0;
+    margin:0;
+  }
+  .categoryListingEditBar{
+    width:2rem;
+    flex-wrap:wrap;
+    top:0;
+    right:1rem;
+  }
+  .categoryListingEditBar svg{
+    width:20px;
+    height:20px;
+  }
+}
+@media (min-width: 250px) and (max-width:375px) {
+  .pageHeader {
+    font-size: 1.5rem;
+  }
+  .profileHeader {
+    display:block;
+    position: relative;
+    padding-bottom: 2rem;
+  }
+  .logOut {
+    display: block;
+    float:right;
+    clear:both;
+    margin-bottom:1rem;
+    font-size: 0.875rem;
+  }
+  .profileName, 
+  .profileEmail, 
+  .profileAddress, 
+  .profileAddressActive, 
+  .profileEmailActive, 
+  .profileNameActive {
+    padding: 0.25rem;
+    border-radius: 6px;
+}
+  .profileDetailsHeader {
+    width:100%;
+  }
+  .createListing {
+    gap:1rem;
+  }
+  .categoryListing {
+    width:100vw;
+  }
+ 
+  .categoryListingImg {
+    width: auto;
+    aspect-ratio:1;
+    object-fit:cover;
+    border-radius:12px;
+  }
+  .categoryListingDetails{
+    width:50%;
+  }
+  .categoryListingPrice{
+    margin:0.3rem 0 0.5rem 0;
+    font-size:1rem;
+  }
+
+ 
  
 }
